unpackaged/main/default/objects/litify_pm__Matter_Stage_Activity__c/litify_pm__Matter_Stage_Activity__c.object-meta.xml
<CustomObject>
    <label>Stage</label>
    <nameField>
        <label>Matter Stage Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>