unpackaged/main/default/objects/litify_pm__Matter_Stage_Activity__c/fields/litify_pm__Guidance_for_success__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Guidance_for_success__c</fullName>
    <description>It is a quick guide so that the attorney is aware of the best practices in each stage.</description>
    <label>Guidance for success</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>