unpackaged/main/default/objects/litify_pm__Matter_Stage_Activity__c/fields/litify_pm__Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipName>Matter_Stage_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>