unpackaged/main/default/objects/litify_pm__Matter_Stage_Activity__c/fields/litify_pm__Original_Matter_Stage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Original_Matter_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Parent Matter Stage</description>
    <label>Original Matter Stage</label>
    <referenceTo>litify_pm__Matter_Stage__c</referenceTo>
    <relationshipLabel>Stages</relationshipLabel>
    <relationshipName>Stages</relationshipName>
    <type>Lookup</type>
</CustomField>