unpackaged/main/default/objects/litify_pm__Matter_Stage_Activity__c/fields/litify_pm__Set_As_Active_At__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Set_As_Active_At__c</fullName>
    <description>Stores the date/time when the Stage was set as the active stage of the matter</description>
    <label>Set As Active At</label>
    <type>DateTime</type>
</CustomField>