unpackaged/main/default/objects/litify_pm__Matter_Stage_Activity__c/fields/litify_pm__Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Stage_Status__c</fullName>
    <label>Stage Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Idle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>